--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ requests = "^2.28.1"
 python-dotenv = "^0.21.0"
 pydantic = "^1.10.4"
 lxml = "^4.9.2"
+jinja2 = "^3.1.2"
 
 [tool.poetry.scripts]
 freidok = 'freidok.cli:run'
