--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ lxml = "^4.9.2"
 jinja2 = "^3.1.2"
 
 [tool.poetry.scripts]
-freidok = 'freidok.cli:run'
+freidok = 'freidok.cli.run:main'
 
 [tool.poetry.group.dev.dependencies]
 datamodel-code-generator = {extras = ["http"], version = "^0.17.0"}
